--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
 </head>
 <body>
   <h1>Wyszukiwarka krajów</h1>
-  <input id="country-name" type="text" />
-  <button id="search">Szukaj kraju</button>
+  <form>
+    <input id="country-name" type="text" />
+    <button id="search">Szukaj kraju</button>
+  </form>
   <h2>Lista krajów</h2>
   <ul id="countries">
     <li>Brak danych</li>
